# rust-example-rest-api

./: README.md  docker-compose.yml
database/: docker-compose.yml  flyway.conf
database/migrations/: V01__create_initial_schema.sql
postman/: rust_api.postman_collection.json
rest-api/: Cargo.toml  Dockerfile  docker-compose.yml
rest-api/src/: main.rs  models.rs  schema.rs
