[package]
name = "rest-api"
version = "0.1.0"
authors = ["lucasfantacuci"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.7", features = ["postgres"] }
serde = "1.0.126"
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["v4"] }